# Zombies-Simulation

./: CMakeLists.txt  README.md
inc/: City.h  GameSpecs.h  Human.h  Organism.h  Zombie.h
src/: City.cpp  Human.cpp  Organism.cpp  Zombie.cpp  main.cpp
test/: HumanTest.cpp  ZombieTest.cpp  testNotes.md
